--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,6 @@ body{
 }
 
 .reg-main h2{
-    font-family: 'Oswald', sans-serif;
     font-size: 25px;
     color: white;
 }
@@ -62,6 +61,7 @@ body{
     font-size: 14px;
     color: white;
     border: none;
+    cursor: pointer;
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#28D2DE), to(#1A878F));
 }
 
@@ -69,9 +69,13 @@ body{
     border-radius: 5px;
     width: 160px;
     height: 30px;
-    font-family: 'Archivo', sans-serif;
     font-size: 14px;
     color: white;
     border: none;
+    cursor: pointer;
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#28D2DE), to(#1A878F));
+}
+
+#loginError, #regerror {
+    color: red;
 }
