--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
     <div id="sidebar">
         <div id="logoSidebar"><h3>WE - CHAT</h3><img src="../svgicons/speak.svg"></div>
         <div id="groups"><h4>GROUP CHATS - 9</h4><ul id="groupsUL"></ul></div>
-        <div id="onlinePeople"><h4>ONLINE PEOPLE - 7</h4><ul><li>Simon Dyhr</li><li>Bengt Åkesson</li><li>Felicia Jönsson</li><li>Ove Ovesson</li><li>Kalle Beng</li><li>Mange Magnusson</li><li>Albert Troi</li></ul></div>
+        <div id="onlinePeople"><h4>ONLINE PEOPLE - 0</h4><ul id="onlinePeopleUL"></ul></div>
     </div>
 
     <div id="mainContent">
@@ -91,6 +91,7 @@
 <script src="../js/groupHandler.js"></script>
 <script src="../js/messageHandler.js"></script>
 <script src="../js/chatHandler.js"></script>
+<script src="../js/onlineUsersHandler.js"></script>
 <script src="../js/finalHandler.js"></script>
 </body>
 </html>
