fixed display issues with user name

--- a/views/index.html
+++ b/views/index.html
@@ -36,17 +36,18 @@
                     <input type="text" id="username" name="username" placeholder="Username" autocomplete="off" required>
                     <input  type="text" id="email" name="email" placeholder="Email" autocomplete="off" required>
                     <input type="password" id="password" name="password" placeholder="Password" required>
-                    <button id="sign-up" name="signup">Create your account</button>
+                    <p class="help-text">Password must contain 6 symbols or more</p>
+                    <button id="sign-up" name="signup" type="submit">Create your account</button>
+                <span id="regerror"></span>
             </div>
             <div class="login">
                 <h2>Log in</h2>
                 <input  type="text" id="sign-in-email" name="email" placeholder="Email"/>
                 <input type="password" id="sign-in-password" name="password" placeholder="Password"/>
                 <button id="sign-in" name="signin">Sign In</button>
+                <span id="loginError"></span>
             </div>
         </div>
-        <span id="loginError"></span>
-        <span id="regerror"></span>
     </div>
 
 
