--- a/css/styles.css
+++ b/css/styles.css
@@ -3,40 +3,21 @@ body{
     font-family: 'Archivo', sans-serif;
 }
 
-.start-screen {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
 .reg-main {
-    display: flex;
     background-color: #434753;
-    justify-content: center;
-    min-width: 800px;
-    min-height: 400px;
 }
 
 .regform {
     display: flex;
     flex-direction: column;
-    border-right: 1px solid white;
-    padding-right: 50px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    justify-content: center;
-    text-align: center;
+    align-items: center;
 }
 
 .login {
     display: flex;
     flex-direction: column;
-    padding-left: 50px;
-    justify-content: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    text-align: center;
+    align-items: center;
+    padding-bottom: 25px;
 }
 
 .reg-main h2{
@@ -47,10 +28,12 @@ body{
 .reg-main input {
     padding: 10px;
     margin-bottom: 5px;
+    margin-left: 5px;
     border-radius: 5px;
     border: 1px solid #cdcdcd;
     background-color: #fcfcfc;
     box-shadow: inset 4px 6px 10px -4px rgba(0, 0, 0, 0.3), 0 1px 1px -1px rgba(255, 255, 255, 0.3);
+    width: 50%;
 }
 
 .login button {
@@ -78,4 +61,55 @@ body{
 
 #loginError, #regerror {
     color: red;
+}
+
+#startHeader, #signinpls {
+    text-align: center;
+}
+
+.help-text {
+    color: white;
+    padding: 0;
+    margin: 0;
+    font-size: 10px;
+    font-style: italic;
+}
+
+@media screen and (min-width: 650px) {
+    .reg-main {
+        display: flex;
+        justify-content: center;
+        min-width: 800px;
+        min-height: 400px;
+    }
+
+    .regform {
+        display: flex;
+        flex-direction: column;
+        border-right: 1px solid white;
+        padding-right: 50px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .start-screen {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+    .login {
+        padding-left: 50px;
+        justify-content: center;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        text-align: center;
+    }
+    .reg-main input {
+        width: 100%;
+    }
+
 }
