refractored the code

--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,6 @@
     <div class="start-screen">
         <h1 id="startHeader">WeChat</h1>
         <h1 id="signinpls">Welcome! Please sign in or create an account.</h1>
-       <!-- <button id="sign-out" name="signout">Sign Out</button> -->
         <div class="reg-main">
             <div class="regform">
                 <h2>Create an account</h2>
@@ -87,7 +86,7 @@
 </div>
 
 <script src="../js/firebaseHandler.js"></script>
-<script src="../js/index.js"></script>
+<script src="../js/accountHandler.js"></script>
 <script src="../js/initialHandler.js"></script>
 <script src="../js/groupHandler.js"></script>
 <script src="../js/messageHandler.js"></script>
