--- a/views/index.html
+++ b/views/index.html
@@ -70,7 +70,7 @@
             </div>
             <div id="headerUserSettings" class="headerUserSettingsHide">
                 <div id="headerUserLogout" onclick="signOutOnlineUser()"><i title='logout' class="fas fa-sign-out-alt"></i></div>
-                <div id="headerUserBack"><i class="ion ion-close-round"></i></div>
+                <div id="headerUserBack"><i class="fas fa-times"></i></div>
             </div>
         </div>
         <div id="messageBox">
