--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
 <div id="chatApp">
     <div id="sidebar">
         <div id="logoSidebar"><h3>WE - CHAT</h3><img src="../svgicons/speak.svg"></div>
-        <div id="groups"><h4>GROUP CHATS - 9</h4><ul id="groupsUL"></ul></div>
+        <div id="groups"><h4>GROUP CHATS</h4><ul id="groupsUL"></ul></div>
         <div id="onlinePeople"><h4>ONLINE PEOPLE - 0</h4><ul id="onlinePeopleUL"></ul></div>
     </div>
 
